--- a/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
@@ -179,7 +179,7 @@ function limpiarCampos(side){
 					                [% PERL %]
 					                                    print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
 					                                                                        onClick => "buscar();",
-					                                                                        boton    => "btn-large btn btn-primary",
+					                                                                        boton    => "btn btn-primary",
 					                                            ) ;
 					                [% END %]
                                 </div>
