--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_tipo_de_prestamos.tmpl
@@ -1,22 +1,22 @@
-  <table border=0 cellspacing=0 cellpadding=0 width="100%" align='center'>
-
-	[% IF tipo_sancion %]
-	    <tr class="titulo_tabla_resultado">
-                <td>[% "Se aplica a" | i18n %]</td>
-	    </tr>
-	    [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
-		<tr><td>
-			    <input type="checkbox" name="chkTP" id="chkTP" value="[% tipo_prestamo.getId_tipo_prestamo %]" [% IF tipo_sancion.aplicaAlTipoDePrestamo( tipo_prestamo.getId_tipo_prestamo ) %] checked="checked" [% END %] > [% tipo_prestamo.getDescripcion %]
-		</td></tr>
-	    [% END %]
-    [% END %]
-    <tr><td>
+<div class="control-group">
+        [% IF tipo_sancion %]
+              <label class="control-label" for="chkTP">[% "Se aplica a" | i18n %]</label>
+              <div class="controls">
+                  [% FOREACH tipo_prestamo IN TIPOS_PRESTAMOS %]
+                        <label class="checkbox">
+                          <input type="checkbox" name="chkTP" id="chkTP" value="[% tipo_prestamo.getId_tipo_prestamo %]" [% IF tipo_sancion.aplicaAlTipoDePrestamo( tipo_prestamo.getId_tipo_prestamo ) %] checked="checked" [% END %] > [% tipo_prestamo.getDescripcion %]        
+                        </label>
+                  [% END %]
+              </div>
+        [% END %]
+</div>
+<div class="form-actions">
     [% PERL %]
                         print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
                                                             boton   => "boton_guardar",
+                                                            inline => "1",
                                                             onClick => "guardarTiposQueAplica();",
                                                             title   => "[% 'Guardar' | i18n %]",
                                 ) ;
     [% END %]
-     </td></tr>
-</table>
+</div> 
