--- a/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
@@ -141,7 +141,16 @@ function limpiar(){
         <div class="control-group">
           <div class="controls">
             <input type="text" id="buscar" name="buscar" value="">
-            <p class="help-block"><span class="label label-info">[% 'Nota' | i18n %]</span>[% ' Ingrese el Apellido, Nombre o Numero de Socio.' | i18n %]</p>
+
+                [% PERL %]
+                    print C4::AR::Filtros::setHelpInput(   
+                                                    text        => "[% 'Ingrese el Apellido, Nombre o Numero de Socio.' | i18n %]",
+                                                    class       => "info",
+                                                    textLabel   => "NOTA:",
+                                            ) ;
+                    
+                [% END %]
+            
           </div>    
         </div>  
  <!--[% PERL %]
