--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -1,5 +1,5 @@
-<fieldset class="resultados_busqueda">
-    <legend class="titulo_legend">[% "Preferencias del cat&aacute;logo" | i18n %]</legend>
+<fieldset>
+    <legend>[% "Preferencias del cat&aacute;logo" | i18n %]</legend>
     <div class="tablaResultado_preferencias" id="tablaResultado_preferencias" >
         <table name="tablaResult" class="table table-striped">
             <thead>
