--- a/intranet/htdocs/intranet-tmpl/admin/usuarios/adminLibreDeuda.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/usuarios/adminLibreDeuda.tmpl
@@ -24,34 +24,65 @@ function desmarcar(chk){
     </div>
 </div>
 [% END %]
-<fieldset >
-      <legend class="titulo_legend">[% "Administraci&oacute;n de Libre Deuda" | i18n %]</legend>
-      <p class="inputFontNormal">
+<form name="adminLiDe" method="post" action="[% url_prefix %]/admin/usuarios/adminLibreDeuda.pl" class="form-horizontal">
+<fieldset>
+    <legend class="titulo_legend">[% "Administraci&oacute;n de Libre Deuda" | i18n %]</legend>
+    <p class="inputFontNormal">
           [% "Elija porqu&eacute; causa no se puede realizar la impresi&oacute;n del certificado de libre deuda" | i18n %]
-      </p>
-      <br>
-    <fieldset >
-          <legend class="titulo_legend">[% "Por tener:" | i18n %]</legend>
-          <form name="adminLiDe" method="post" action="[% url_prefix %]/admin/usuarios/adminLibreDeuda.pl">
-              <input type=hidden name=newflags value=1>
-              <ul>
-                  <li><input type="checkbox" name="chk1" id="chk1" value="1" onclick="desmarcar(this)"> [% "reservas adjudicadas" | i18n %]<br></li>
-                  <li><input type="checkbox" name="chk2" id="chk2" value="1" onclick="desmarcar(this)"> [% "reservas en espera" | i18n %]<br></li>
-                  <li><input type="checkbox" name="chk3" id="chk3" value="1" onclick="desmarcar(this)"> [% "prestamos vencidos" | i18n %] <br></li>
-                  <li><input type="checkbox" name="chk4" id="chk4" value="1" onclick="desmarcar(this)"> [% "prestamos en curso" | i18n %]<br></li>
-                  <li><input type="checkbox" name="chk5" id="chk5" value="1" onclick="desmarcar(this)"> [% "sanciones" | i18n %] <br></li>
-                  <li><input type="checkbox" name="chk0" id="chk0" value="1" onclick="checkedAll(this)"> [% "todas" | i18n %]<br></li>
-              </ul>
-          <br>
-                      [% PERL %]
-                                          print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
-                                                                              boton   => "boton_buscar",
-                                                                              onClick => "adminLiDe.submit();",
-                                                  ) ;
-                      [% END %]
-          </form>
-    </fieldset>
-</fieldset>
+    </p>
+    <legend class="titulo_legend">[% "Por tener:" | i18n %]</legend>
+          
+    <input type="hidden" name="newflags" value="1">
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk1" id="chk1" value="1" onclick="desmarcar(this)"> [% "reservas adjudicadas" | i18n %]
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk2" id="chk2" value="1" onclick="desmarcar(this)"> [% "reservas en espera" | i18n %]
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk3" id="chk3" value="1" onclick="desmarcar(this)"> [% "prestamos vencidos" | i18n %]
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk4" id="chk4" value="1" onclick="desmarcar(this)"> [% "prestamos en curso" | i18n %]
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk5" id="chk5" value="1" onclick="desmarcar(this)"> [% "sanciones" | i18n %]
+        </div>
+    </div>
+    
+    <div class="control-group">
+        <div class="controls">
+            <input type="checkbox" name="chk0" id="chk0" value="1" onclick="checkedAll(this)"> [% "todas" | i18n %]
+        </div>
+    </div>
+    
+    <div class="form-actions">
+          
+        [% PERL %]
+                          print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
+                                                              boton   => "boton_buscar",
+                                                              onClick => "adminLiDe.submit();",
+                                  ) ;
+        [% END %]
+        
+    </div>
+    
+</fieldset>                      
+</form>
 <script>
 // PARA MARCAR LOS CHECKBOX QUE CORRESPONDE
 var l="[% libreD %]";
