--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
@@ -230,8 +230,10 @@ $(document).ready( function() {
 
 </script>
 
+
+<div id="divSancionesReglas"></div>
 <fieldset>
-    <legend class="titulo_legend">[% "Tipos de sanciones" | i18n %] </legend>
+    <legend class="titulo_legend">[% "Nuevo tipo de sancion" | i18n %] </legend>
     <section class="center-section-form"> 
             <form class="form-horizontal">
                   <div id="divSanciones">
@@ -256,9 +258,7 @@ $(document).ready( function() {
            
              <div id="divSancionesTiposPrestamos"></div>
               </form>
-  </section>           
-  <div id="divSancionesReglas"></div>
-          
+  </section>                     
 </fieldset>
 
 [% INCLUDE "intranet-bottom.inc" %]
