--- a/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/sanciones.tmpl
@@ -144,9 +144,9 @@ function limpiar(){
 
                 [% PERL %]
                     print C4::AR::Filtros::setHelpInput(   
-                                                    text        => "[% 'Ingrese el Apellido, Nombre o Numero de Socio.' | i18n %]",
+                                                    text        => "[% ' Ingrese el Apellido, Nombre o Numero de Socio.' | i18n %]",
                                                     class       => "info",
-                                                    textLabel   => "NOTA:",
+                                                    textLabel   => "NOTA",
                                             ) ;
                     
                 [% END %]
