--- a/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
@@ -1,9 +1,9 @@
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend">[% "Preferencias de circulaci&oacute;n" | i18n %]</legend>
     <div class="tablaResultado_preferencias" id="tablaResultado_preferencias" >
-        <table name="tablaResult" class="datos_tabla table table-striped">
+        <table name="tablaResult" class="table table-striped">
             <thead>
-                <tr class="titulo_tabla_resultado">
+                <tr>
                     <th>[% "Variable" | i18n %]</th>
                     <th>[% "Valor" | i18n %]</th>
                     <th>[% "Explicaci&oacute;n" | i18n %]</th>
