filtros.pm rapo

--- a/intranet/htdocs/intranet-tmpl/admin/global/agregar_metodo_auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/agregar_metodo_auth.tmpl
@@ -25,7 +25,8 @@
                                             onClick => "guardarMetodo();",
                                             width   => "auto",
                                             title   => "[% 'Guardar M&eoacute;todo' | i18n %]", 
-                                            alternClass   => "botonCentrado"
+                                            alternClass   => "botonCentrado",
+                                            inline  => "1"
                                 ) ;
             [% END %]
         </div>
